added CSS to input & header

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <form>
         <!-- Date Input -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Date*</label>
                 <input required type="date"/>
             </div>
             <!-- Student Full Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Full Name*</label>
                 <input required type="text"/>
             </div>
             <!-- Class -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Class*</label>
                 <select>
                     <option>Choose Your Class</option>
@@ -42,32 +42,32 @@
             </div>
         
             <!-- Subject/Stream -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Subject/Stream*</label>
                 <input required type="text"/>
             </div>
             <!-- Father Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Father Name*</label>
                 <input required type="text"/>
             </div>
             <!-- Mother Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Mother Name*</label>
                 <input required type="text"/>
             </div>
             <!-- Father Occupation -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Father Occupation(Optional)</label>
                 <input type="text"/>
             </div>
             <!-- DOB -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>DOB*</label>
                 <input required type="date"/>
             </div>
             <!-- Gender -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Gender*</label>
                 <select>
                     <option>Choose Your Gender</option>
@@ -77,59 +77,59 @@
                 </select>
             </div>
             <!-- Mobile Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Mobile Number*</label>
                 <input required type="Number"/>
             </div>
 
             <!-- Alternate Mobile Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Alternate Mobile Number(Optional)</label>
                 <input type="Number"/>
             </div>
 
             <!-- Email -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>E-mail</label>
                 <input type="email"/>
             </div>
             <!-- Address -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Address*</label>
                 <input required type="text"/>
             </div>
             <!-- City -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>City*</label>
                 <input required type="text"/>
             </div>
             <!-- Pin Code -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Pin Code*</label>
                 <input required type="number"/>
             </div>
             <!-- State -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>State*</label>
                 <input required type="text"/>
             </div>
             <!-- Religion -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Religion*</label>
                 <input required type="text"/>
             </div>
             <!-- Nationality -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>Nationality*</label>
                 <input required type="text" value="Indian" readonly/>
             </div>
             <!-- State -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>State*</label>
                 <input required type="text"/>
             </div>
             <!-- School/College Name -->
-            <div id="input-parenet">
+            <div class="input-parent">
                 <label>School/College Name*</label>
                 <input required type="text"/>
             </div>
@@ -163,6 +163,27 @@
             text-align: center;
             padding: 20px;
         }
+
+        .input-parent{
+            padding: 10px;
+        }
+
+        input{
+            border-top-style: none;
+            border-left-style: none;
+            border-right-style: none;
+            border-bottom-style: solid;
+
+            border-width: 1px;
+            width: 100%;
+            height: 36px;
+        }
+
+
+
+
+
+
     </style>
 </body>
 </html>
